Pagination, rangement images
- Nouveau dossier blobs dans images pour les blobs de peinture
- Ajout de pagination dans la page profil
- Inputs mot de passe sont maintenant de type password
- Les commentaires du profil utilisent une fonction qui limite le nombre de commentaires par page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'Knewave-Regular';
+    src: url('../fonts/Knewave-Regular.ttf');
+}
+
 :root {
     --white: #ffffff;
     --black: #000000;
@@ -86,14 +91,19 @@ body {
     background-color: var(--secondary_color);
     color: var(--white);
     text-decoration: none;
-    padding: 10px;
-    margin: 10px;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 8px 6px #ff1884,
+        0px 0px 10px 10px #ff1884,
+        0px 0px 0px 7px #ff1884;
 }
 
 .header_title {
-    color: var(--white);
-    font-size: 30px;
+    color: rgb(255, 232, 199);
+    font-size: 50px;
     text-shadow: 0px 0px 9px var(--supp_color1), 0px 0px 9px var(--supp_color1);
+    font-family: 'Knewave-Regular';
 }
 
 /* Navbar */
@@ -118,6 +128,7 @@ body {
     font-size: 15px;
     padding: 10px;
     text-decoration: none;
+    height: 100%;
 }
 
 .nav_elem_inside:hover {
@@ -159,7 +170,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 20px;
+    margin: 25px 0 20px 0;
     /* background-color: greenyellow; */
     gap: 25px;
 }
@@ -188,7 +199,9 @@ body {
     color: var(--white);
     border-radius: 10px;
     padding: 5px;
-    font-size: 15px;
+    font-size: 20px;
+    font-family: 'Knewave-Regular';
+
 }
 
 .message_profile {
@@ -256,6 +269,32 @@ body {
     filter: brightness(0) saturate(100%) invert(59%) sepia(83%) saturate(1657%) hue-rotate(159deg) brightness(103%) contrast(102%);
 }
 
+/* Profil */
+
+.your_comments {
+    font-family: 'Knewave-Regular';
+    font-size: 25px;
+}
+
+.profile_com {
+    padding: 10px;
+    font-family: 'Knewave-Regular';
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 5px black;
+}
+
+/* Pagination */
+
+.page_grid {
+    width: 100%;
+    display: flex;
+    float: left;
+    justify-content: space-between;
+}
+
 /* Formulaire commentaire */
 
 .comment_textarea {
@@ -264,3 +303,19 @@ body {
 }
 
 /* Footer */
+
+/* RESPONSIVE */
+
+@media (max-width: 450px) {
+    :root {
+        --shadow: 0px 0px 10px 20px rgb(0, 0, 0, 0.8);
+    }
+
+    .nav_elem_inside {
+        padding: 3px;
+    }
+
+    .header_title {
+        font-size: 40px;
+    }
+}
